--- a/surbanopage.html
+++ b/surbanopage.html
@@ -704,7 +704,7 @@
       <!-- Project 2 - Creddito -->
       <div class="project-card">
         <div class="project-images">
-          <img src="corner.png" alt="Creddito Screenshot 1">
+          <img src="corn.png" alt="Creddito Screenshot 1">
         
         </div>
         <div class="project-details">
