--- a/surbanopage.html
+++ b/surbanopage.html
@@ -705,6 +705,7 @@
       <div class="project-card">
         <div class="project-images">
           <img src="corn.png" alt="Creddito Screenshot 1">
+          <img src="22.png" alt="Creddito Screenshot 2">
         
         </div>
         <div class="project-details">
