--- a/Aliazpage.html
+++ b/Aliazpage.html
@@ -639,9 +639,9 @@
             <div class="card-accent accent-br"></div>
             <div class="scan-line"></div>
             <div class="slideshow">
-              <img src="web.jpg" alt="Slideshow Image 1">
-              <img src="ui.jpg" alt="Slideshow Image 2">
-              <img src="ph.jpg" alt="Slideshow Image 3">
+              <img src="web.png" alt="Slideshow Image 1">
+              <img src="ui.png" alt="Slideshow Image 2">
+              <img src="ph.png" alt="Slideshow Image 3">
             </div>
           </div>
       
@@ -708,8 +708,8 @@
       <!-- Project 2 - Creddito -->
       <div class="project-card">
         <div class="project-images">
-          <img src="b.png" alt="Creddito Screenshot 1">
-        
+          <img src="hub.png" alt="Creddito Screenshot 1">
+          <img src="hubhub.png" alt="Creddito Screenshot 2">
         </div>
         <div class="project-details">
           <h3>E-Commerce Website: BeautyHub</h3>
