--- a/Uypage.html
+++ b/Uypage.html
@@ -335,8 +335,8 @@
   
         <div class="project-card">
           <div class="project-images">
-            <img src="luto (1).jpg" alt="Screenshot 1" class="active">
-            <img src="luto (2).jpg" alt="Screenshot 2">
+            <img src="lo.png" alt="Screenshot 1" class="active">
+            <img src="co.png" alt="Screenshot 2">
           </div>
           <div class="project-details">
             <h3>Luto Loco: Web Application</h3>
