--- a/surbanopage.html
+++ b/surbanopage.html
@@ -36,7 +36,7 @@
     .data-line {
       position: absolute;
       height: 2px;
-      background: rgba(201, 162, 182, 0.5);
+      background: rgba(255, 107, 53, 0.5);
       width: 150px;
       animation: dataStreamMove 8s linear infinite;
       opacity: 0.3;
@@ -45,7 +45,7 @@
     /* Tech Circles */
     .tech-circle {
       position: absolute;
-      border: 1px solid rgba(255, 20, 147, 0.3);
+      border: 1px solid rgba(255, 107, 53, 0.3);
       border-radius: 50%;
       animation: rotateTech 20s linear infinite;
     }
@@ -55,7 +55,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      color: rgba(28, 2, 43, 0.3);
+      color: rgba(255, 107, 53, 0.3);
       font-family: 'Courier New', monospace;
       font-size: 14px;
       line-height: 1;
@@ -174,10 +174,10 @@
       display: flex;
       align-items: center;
       padding: 10px 20px;
-      background: rgba(255, 20, 147, 0.1);
-      border: 1px solid rgba(255, 20, 147, 0.3);
+      background: rgba(255, 107, 53, 0.1);
+      border: 1px solid rgba(255, 107, 53, 0.3);
       border-radius: 20px;
-      color: #ff1493;
+      color: #FF6B35;
       text-decoration: none;
       font-family: 'Orbitron', sans-serif;
       font-size: 0.9rem;
@@ -186,8 +186,8 @@
     }
 
     .back-button:hover {
-      background: rgba(255, 20, 147, 0.2);
-      box-shadow: 0 0 15px rgba(255, 20, 147, 0.3);
+      background: rgba(255, 107, 53, 0.2);
+      box-shadow: 0 0 15px rgba(255, 107, 53, 0.3);
       transform: translateX(-5px);
     }
 
@@ -197,7 +197,7 @@
 
     body {
       overflow-y: auto;
-      background: linear-gradient(135deg, #ff69b4 0%, #101011 100%);
+      background: linear-gradient(135deg, #FF6B35 0%, #101011 100%);
       color: #E6E6FA;
     }
 
@@ -243,20 +243,20 @@
       display: flex;
       align-items: center;
       padding: 0.5rem;
-      color: #ff1493;
+      color: #FF6B35;
       text-decoration: none;
       transition: all 0.3s ease;
     }
 
     .navmenu a:hover {
       transform: translateX(5px);
-      color: #ff69b4;
-      text-shadow: 0 0 10px rgba(255, 20, 147, 0.5);
+      color: #FF8C42;
+      text-shadow: 0 0 10px rgba(255, 107, 53, 0.5);
     }
 
     .navmenu .active {
-      color: #ff1493;
-      text-shadow: 0 0 10px rgba(255, 20, 147, 0.5);
+      color: #FF6B35;
+      text-shadow: 0 0 10px rgba(255, 107, 53, 0.5);
     }
 
     main {
@@ -282,11 +282,11 @@
       margin: 0;
       padding: 0;
       line-height: 1.2;
-      background: linear-gradient(to bottom, #ff1493 0%, rgba(255, 20, 147, 0.8) 50%, rgba(255, 20, 147, 0.4) 100%);
+      background: linear-gradient(to bottom, #FF6B35 0%, rgba(255, 107, 53, 0.8) 50%, rgba(255, 107, 53, 0.4) 100%);
       -webkit-background-clip: text;
       background-clip: text;
       -webkit-text-fill-color: transparent;
-      filter: drop-shadow(0 0 8px rgba(255, 20, 147, 0.5))
+      filter: drop-shadow(0 0 8px rgba(255, 107, 53, 0.5))
              drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.7))
              drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
     }
@@ -301,8 +301,8 @@
         2px -2px 0px #000000,
         -2px 2px 0px #000000,
         0px 4px 4px rgba(0, 0, 0, 0.8),
-        0 0 8px rgba(255, 20, 147, 0.5),
-        0 0 12px rgba(255, 20, 147, 0.3);
+        0 0 8px rgba(255, 107, 53, 0.5),
+        0 0 12px rgba(255, 107, 53, 0.3);
     }
 
     .space {
@@ -469,21 +469,21 @@
       background: rgba(46, 8, 84, 0.8);
       padding: 4px;
       box-shadow: 
-        0 0 20px rgba(255, 20, 147, 0.3),
-        inset 0 0 20px rgba(255, 20, 147, 0.2);
+        0 0 20px rgba(255, 107, 53, 0.3),
+        inset 0 0 20px rgba(255, 107, 53, 0.2);
       animation: imagePulse 3s ease-in-out infinite;
     }
 
     @keyframes imagePulse {
       0%, 100% {
         box-shadow: 
-          0 0 20px rgba(255, 20, 147, 0.3),
-          inset 0 0 20px rgba(255, 20, 147, 0.2);
+          0 0 20px rgba(255, 107, 53, 0.3),
+          inset 0 0 20px rgba(255, 107, 53, 0.2);
       }
       50% {
         box-shadow: 
-          0 0 30px rgba(255, 20, 147, 0.5),
-          inset 0 0 30px rgba(255, 20, 147, 0.3);
+          0 0 30px rgba(255, 107, 53, 0.5),
+          inset 0 0 30px rgba(255, 107, 53, 0.3);
       }
     }
   </style>
@@ -709,8 +709,8 @@
         
         </div>
         <div class="project-details">
-          <h3>Corner 22’s Billing System</h3>
-          <p>Corner 22’s billing system is a simple Point of Sale (POS) solution designed to
+          <h3>Corner 22's Billing System</h3>
+          <p>Corner 22's billing system is a simple Point of Sale (POS) solution designed to
             streamline their payment process. It records dine-in cash payments and online orders paid
             via GCash. The system securely stores all transactions in a database, replacing manual
             file-based records. This helps the staff manage orders efficiently, reduces errors, and
@@ -739,11 +739,11 @@
     }
 
     #projects h2 {
-      color: #ff1493;
+      color: #FF6B35;
       font-family: 'Orbitron', sans-serif;
       font-size: 2.8rem;
       margin-bottom: 50px;
-      text-shadow: 0 0 15px rgba(255, 20, 147, 0.5);
+      text-shadow: 0 0 15px rgba(255, 107, 53, 0.5);
       letter-spacing: 2px;
       padding-top: 50px;
     }
@@ -781,12 +781,12 @@
       width: 450px;
       height: 580px;
       margin: 0 auto;
-      background: linear-gradient(135deg, rgba(37, 14, 27, 0.95), rgba(255, 105, 180, 0.95));
-      border: 1px solid rgba(255, 20, 147, 0.3);
-      border-top: 2px solid rgba(255, 20, 147, 0.5);
-      border-bottom: 2px solid rgba(255, 20, 147, 0.5);
+      background: linear-gradient(135deg, rgba(37, 14, 27, 0.95), rgba(255, 107, 53, 0.95));
+      border: 1px solid rgba(255, 107, 53, 0.3);
+      border-top: 2px solid rgba(255, 107, 53, 0.5);
+      border-bottom: 2px solid rgba(255, 107, 53, 0.5);
       border-radius: 12px;
-      box-shadow: 0 0 25px rgba(255, 20, 147, 0.2);
+      box-shadow: 0 0 25px rgba(255, 107, 53, 0.2);
       padding: 15px;
       display: flex;
       flex-direction: column;
@@ -818,13 +818,13 @@
       color: #E6E6FA;
       background: rgba(46, 8, 84, 0.5);
       border-radius: 10px;
-      border: 1px solid rgba(255, 20, 147, 0.2);
+      border: 1px solid rgba(255, 107, 53, 0.2);
     }
 
     .project-details h3 {
       font-size: 1.2rem;
       margin-bottom: 12px;
-      color: #ff1493;
+      color: #FF6B35;
       line-height: 1.4;
     }
 
@@ -847,8 +847,8 @@
 
     .technologies i {
       font-size: 2rem;
-      color: #ff69b4;
-      text-shadow: 0 0 10px rgba(255, 20, 147, 0.6);
+      color: #FF6B35;
+      text-shadow: 0 0 10px rgba(255, 107, 53, 0.6);
       transition: transform 0.3s ease;
     }
 
@@ -976,28 +976,28 @@
     }
 
     .skill-category {
-      background: rgba(255, 20, 147, 0.08);
-      border: 1px solid rgba(255, 20, 147, 0.3);
+      background: rgba(255, 107, 53, 0.08);
+      border: 1px solid rgba(255, 107, 53, 0.3);
       border-radius: 15px;
       padding: 25px;
       position: relative;
       overflow: hidden;
-      box-shadow: 0 0 20px rgba(255, 20, 147, 0.2);
+      box-shadow: 0 0 20px rgba(255, 107, 53, 0.2);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .skill-category:hover {
       transform: translateY(-5px);
-      box-shadow: 0 5px 25px rgba(255, 20, 147, 0.3);
+      box-shadow: 0 5px 25px rgba(255, 107, 53, 0.3);
     }
 
     .skill-category h3 {
-      color: #ff1493;
+      color: #FF6B35;
       font-family: 'Orbitron', sans-serif;
       font-size: 1.5rem;
       margin-bottom: 20px;
       text-align: center;
-      text-shadow: 0 0 10px rgba(255, 20, 147, 0.5);
+      text-shadow: 0 0 10px rgba(255, 107, 53, 0.5);
     }
 
     .skill-items {
@@ -1009,24 +1009,24 @@
     .skill-item {
       text-align: center;
       padding: 15px;
-      border: 1px solid rgba(255, 20, 147, 0.1);
+      border: 1px solid rgba(255, 107, 53, 0.1);
       border-radius: 10px;
       background: rgba(46, 8, 84, 0.5);
       transition: all 0.3s ease;
     }
 
     .skill-item:hover {
-      background: rgba(255, 20, 147, 0.1);
+      background: rgba(255, 107, 53, 0.1);
       transform: translateY(-3px);
-      box-shadow: 0 0 15px rgba(255, 20, 147, 0.2);
+      box-shadow: 0 0 15px rgba(255, 107, 53, 0.2);
     }
 
     .skill-item i {
       font-size: 1.8rem;
-      color: #ff1493;
+      color: #FF6B35;
       margin-bottom: 8px;
       display: block;
-      text-shadow: 0 0 10px rgba(255, 20, 147, 0.5);
+      text-shadow: 0 0 10px rgba(255, 107, 53, 0.5);
       transition: transform 0.3s ease;
     }
 
@@ -1044,21 +1044,21 @@
 
     @keyframes iconGlow {
       from {
-        text-shadow: 0 0 10px rgba(255, 20, 147, 0.5);
+        text-shadow: 0 0 10px rgba(255, 107, 53, 0.5);
       }
       to {
-        text-shadow: 0 0 20px rgba(255, 20, 147, 0.8),
-                     0 0 30px rgba(255, 20, 147, 0.6);
+        text-shadow: 0 0 20px rgba(255, 107, 53, 0.8),
+                     0 0 30px rgba(255, 107, 53, 0.6);
       }
     }
 
     .skills-title {
       text-align: center;
-      color: #ff1493;
+      color: #FF6B35;
       font-family: 'Orbitron', sans-serif;
       font-size: 2.5rem;
       margin-bottom: 50px;
-      text-shadow: 0 0 15px rgba(255, 20, 147, 0.5);
+      text-shadow: 0 0 15px rgba(255, 107, 53, 0.5);
       position: relative;
     }
 
@@ -1070,7 +1070,7 @@
       transform: translateX(-50%);
       width: 100px;
       height: 3px;
-      background: linear-gradient(90deg, transparent, #ff1493, transparent);
+      background: linear-gradient(90deg, transparent, #FF6B35, transparent);
     }
 
     @media (max-width: 992px) {
@@ -1370,18 +1370,18 @@
 
     .section-title {
       text-align: center;
-      color: #ff1493;
+      color: #FF6B35;
       font-family: 'Orbitron', sans-serif;
       font-size: 2.8rem;
       margin-bottom: 50px;
-      text-shadow: 0 0 15px rgba(255, 20, 147, 0.5);
+      text-shadow: 0 0 15px rgba(255, 107, 53, 0.5);
       letter-spacing: 2px;
       padding-top: 50px;
     }
 
     .timeline-item {
-      background: rgba(255, 20, 147, 0.05);
-      border: 1px solid rgba(255, 20, 147, 0.1);
+      background: rgba(255, 107, 53, 0.05);
+      border: 1px solid rgba(255, 107, 53, 0.1);
       border-radius: 10px;
       margin-bottom: 1.5rem;
       padding: 1.5rem;
@@ -1429,20 +1429,15 @@
     }
 
     .year {
-      color: #ff1493 !important;
+      color: #FF6B35 !important;
       font-size: 0.9rem !important;
       font-family: 'Orbitron', sans-serif;
     }
 
     .achievements-toggle {
-      position: absolute;
-      right: -100px;
-      top: 50%;
-      transform: translateY(-50%);
-      transform-origin: right center;
-      background: rgba(255, 20, 147, 0.1);
-      border: 1px solid rgba(255, 20, 147, 0.3);
-      color: #ff1493;
+      background: rgba(255, 107, 53, 0.1);
+      border: 1px solid rgba(255, 107, 53, 0.3);
+      color: #FF6B35;
       padding: 0.40rem 0.20rem;
       border-radius: 12px;
       cursor: pointer;
@@ -1455,8 +1450,8 @@
     }
 
     .achievements-toggle:hover {
-      background: rgba(255, 20, 147, 0.2);
-      box-shadow: 0 0 10px rgba(255, 20, 147, 0.3);
+      background: rgba(255, 107, 53, 0.2);
+      box-shadow: 0 0 10px rgba(255, 107, 53, 0.3);
       transform: translateY(-50%) scale(1.05);
     }
 
@@ -1711,6 +1706,7 @@
       align-items: center;
       transform-style: preserve-3d;
       transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1);
+      background: linear-gradient(145deg, rgba(255, 107, 53, 0.1), rgba(255, 140, 66, 0.8));
     }
 
     .contact-container.flipped {
@@ -1778,12 +1774,12 @@
 
     .contact-front {
       transform: rotateY(0deg);
-      background: linear-gradient(145deg, rgba(255, 20, 147, 0.1), rgba(255, 105, 180, 0.8));
+      background: linear-gradient(145deg, rgba(255, 107, 53, 0.1), rgba(255, 140, 66, 0.8));
     }
 
     .contact-back {
       transform: rotateY(-180deg);
-      background: linear-gradient(145deg, rgba(255, 105, 180, 0.8), rgba(255, 20, 147, 0.1));
+      background: linear-gradient(145deg, rgba(255, 140, 66, 0.8), rgba(255, 107, 53, 0.1));
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -1796,15 +1792,11 @@
     }
 
     .contact-content h1 {
-      color: #ff1493;
+      color: #FF6B35;
       font-family: 'Orbitron', sans-serif;
       font-size: 2rem;
       margin-bottom: 30px;
-      text-shadow: 0 0 10px rgba(255, 20, 147, 0.5);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
+      text-shadow: 0 0 10px rgba(255, 107, 53, 0.5);
     }
 
     .blink {
@@ -1822,8 +1814,8 @@
       align-items: center;
       margin-bottom: 20px;
       padding: 15px;
-      background: rgba(255, 20, 147, 0.05);
-      border: 1px solid rgba(255, 20, 147, 0.2);
+      background: rgba(255, 107, 53, 0.05);
+      border: 1px solid rgba(255, 107, 53, 0.2);
       border-radius: 10px;
       transition: all 0.3s ease;
     }
@@ -1869,9 +1861,9 @@
     }
 
     .flip-button, .submit-button {
-      background: rgba(255, 20, 147, 0.1);
-      color: #ff1493;
-      border: 1px solid rgba(255, 20, 147, 0.3);
+      background: rgba(255, 107, 53, 0.1);
+      color: #FF6B35;
+      border: 1px solid rgba(255, 107, 53, 0.3);
       padding: 12px 30px;
       border-radius: 25px;
       cursor: pointer;
@@ -1881,14 +1873,12 @@
       overflow: hidden;
       margin-top: 20px;
       transition: all 0.3s ease;
-      width: auto;
-      display: inline-block;
     }
 
     .flip-button:hover, .submit-button:hover {
-      background: rgba(255, 20, 147, 0.2);
-      border-color: rgba(255, 20, 147, 0.5);
-      box-shadow: 0 0 15px rgba(255, 20, 147, 0.3);
+      background: rgba(255, 107, 53, 0.2);
+      border-color: rgba(255, 107, 53, 0.5);
+      box-shadow: 0 0 15px rgba(255, 107, 53, 0.3);
     }
 
     .button-glow {
@@ -1990,8 +1980,8 @@
 
     .interactive-icon {
       font-size: 1.5rem;
-      color: #F1B7EA;
-      background: rgba(0, 255, 102, 0.05);
+      color: #FF6B35;
+      background: rgba(255, 107, 53, 0.05);
       border-radius: 50%;
       padding: 10px;
       transition: all 0.3s ease;
@@ -1999,9 +1989,9 @@
     }
 
     .interactive-icon:hover {
-      background: #3C2D57;
+      background: #FF6B35;
       transform: scale(1.1) rotate(360deg);
-      box-shadow: 0 0 20px #5D479A;
+      box-shadow: 0 0 20px rgba(255, 107, 53, 0.5);
     }
   </style>
 
