--- a/Joyapage.html
+++ b/Joyapage.html
@@ -1878,6 +1878,147 @@
     .mobile-nav {
       display: none;
     }
+
+    /* Hero Section Styles */
+    #hero {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      padding: 2rem;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .hero-content {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      gap: 4rem;
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .text-container {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 1.5rem;
+      flex: 1;
+    }
+
+    .img-container {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .hello h1,
+    .im-cath h1 {
+      font-size: clamp(2.5rem, 5vw, 5rem);
+      font-family: 'Orbitron', sans-serif;
+      font-weight: 700;
+      text-transform: uppercase;
+      margin: 0;
+      padding: 0;
+      line-height: 1.2;
+    }
+
+    .circle {
+      width: clamp(200px, 30vw, 300px);
+      height: clamp(200px, 30vw, 300px);
+      border-radius: 15px;
+      overflow: hidden;
+      background: rgba(46, 8, 84, 0.8);
+      padding: 4px;
+      box-shadow: 
+        0 0 20px rgba(176, 38, 255, 0.3),
+        inset 0 0 20px rgba(176, 38, 255, 0.2);
+      animation: imagePulse 3s ease-in-out infinite;
+    }
+
+    @media (max-width: 992px) {
+      .hero-content {
+        flex-direction: column;
+        gap: 2rem;
+        text-align: center;
+      }
+
+      .text-container {
+        align-items: center;
+        order: 2;
+      }
+
+      .img-container {
+        order: 1;
+      }
+
+      .hello h1,
+      .im-cath h1 {
+        text-align: center;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .hero-content {
+        padding: 0 1rem;
+      }
+
+      .circle {
+        width: clamp(180px, 40vw, 250px);
+        height: clamp(180px, 40vw, 250px);
+      }
+    }
+
+    @media (max-width: 576px) {
+      #hero {
+        padding: 1rem;
+      }
+
+      .hero-content {
+        gap: 1.5rem;
+      }
+
+      .hello h1,
+      .im-cath h1 {
+        font-size: clamp(2rem, 4vw, 3rem);
+      }
+
+      .circle {
+        width: clamp(150px, 50vw, 200px);
+        height: clamp(150px, 50vw, 200px);
+      }
+    }
+
+    /* Landscape mode adjustments */
+    @media (max-height: 500px) and (orientation: landscape) {
+      #hero {
+        min-height: auto;
+        padding: 1rem;
+      }
+
+      .hero-content {
+        flex-direction: row;
+        gap: 2rem;
+      }
+
+      .text-container {
+        order: 1;
+        align-items: flex-start;
+      }
+
+      .img-container {
+        order: 2;
+      }
+
+      .circle {
+        width: clamp(120px, 25vh, 180px);
+        height: clamp(120px, 25vh, 180px);
+      }
+    }
   </style>
 
   <!-- Add this before the closing body tag -->
